--- a/styles.css
+++ b/styles.css
@@ -17,16 +17,17 @@ body {
     text-align: center; 
     font-size: 20px;
     color: white;
+    z-index: 1;
 }
 
 .background-right {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
-    height: 100%;
-    width: 39em; 
+    bottom: 0;
+    width: 39em;
     background-color: black;
-    z-index: -1;
+    z-index: 0;
 }
 
 .login button {
@@ -76,14 +77,21 @@ body {
 
 .top-icon {
     position: absolute;
-    left: 20px; /* Adjust as needed */
-}
-
-.top-icon {
-    top: 20px; /* Adjust as needed */
+    left: 20px; 
+    top: 20px; 
 }
 
 .top-icon img {
-    width: 50px; /* Adjust as needed */
-    height: 50px; /* Adjust as needed */
+    width: 100px; 
+    height: 100px;
 }
+
+.copyright {
+    position: absolute;
+    bottom: 10px; 
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 14px;
+}
+
