--- a/styles.css
+++ b/styles.css
@@ -98,37 +98,49 @@ body {
 
 /* HOME PAGE */
 header {
-    background-color: transparent;   /* Dark background color for the header */
-    color: white; /* Text color for the header */
-    padding: 10px; /* Padding to add some space around the navigation */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: transparent;
+}
+
+.logo img {
+    height: 40px; /* Adjust as needed */
 }
 
 nav {
-    display: flex; /* Flex layout for the navigation */
-    justify-content: space-between; /* Items will be distributed evenly on the horizontal axis */
+    flex-grow: 1; /* This will make the navigation take up remaining space */
+    text-align: center; /* Align the navigation items in the center */
 }
 
-.left-nav ul,
-.right-nav ul {
-    list-style-type: none; /* Remove default list styles */
-    margin: 20px; /* Remove default margin */
-    padding: 0; /* Remove default padding */
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center the navigation items horizontally */
 }
 
-.left-nav ul li,
-.right-nav ul li {
-    display: inline; /* Display list items horizontally */
-    margin-right: 20px; /* Add some space between list items */
-    font-size: 25px;
+nav ul li {
+    display: inline;
 }
 
-.left-nav ul li a,
-.right-nav ul li a {
-    color: black; /* Text color for navigation links */
-    text-decoration: none; /* Remove underline from links */
+nav ul li:not(:last-child) {
+    margin-right: 50px; /* Add margin between navigation items */
 }
 
-.left-nav ul li a:hover,
-.right-nav ul li a:hover {
-    text-decoration: underline; /* Underline links on hover */
+nav ul li a {
+    text-decoration: none;
+    color: #333;
 }
+
+.user-actions a {
+    text-decoration: none;
+    color: #333;
+    margin-left: 30px;
+}
+
+/* EXPLORE PAGE */
+
+
