--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volunteer Matching App - Home Page</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="/static/styles.css">
+    <script src="/static/main.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="cow.png" alt="Icon">
+            <img src="/static/cow.png" alt="Icon">
         </div>
         <nav>
             <ul>
