--- a/templates/explore.html
+++ b/templates/explore.html
@@ -26,7 +26,17 @@
     </header>
     <div class="explore-container explore-page">
         <div class="card">
-            <img src="testing.png" alt="Profile Picture" class="card-img">
+            <img src="/static/testing.png" alt="org picture" class="card-img">
+        </div>  
+    </div>
+    <div class="action-buttons-container">
+        <button class="action-btn dislike"><img src="/static/dislike-icon.png" alt="Dislike"></button>
+        <button class="action-btn like"><img src="/static/like-icon.png" alt="Like"></button>
+    </div>
+    <div class="explore-container explore-page new-event" style="display: none;">
+        <div class="card">
+            <img src="/static/snow.png" alt="New Event Picture" class="card-img">
+            <!-- Add more event details here -->
         </div>
     </div>
 </body>
