--- a/templates/login.html
+++ b/templates/login.html
@@ -18,5 +18,14 @@
         <p>Don't have an account? <button onclick="showSignup()">Sign up here</button></p>
     </section>
     <!-- Include any necessary JavaScript files here -->
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 </body>
 </html>
