--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="cow.png" alt="Icon">
+            <img src="/static/cow.png" alt="Icon">
         </div>
         <nav>
             <ul>
