--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     height: 100vh;
     position: relative; 
-    background-color: #FEE9D2;
+    background-color: white;
     font-family: 'Inter', sans-serif;
 }
 
