--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,13 @@
 <body>
     <!-- Intro/Home Page Section -->  
     <section id="intro-page">
-        <div class="top-icon">
-            <img src="/static/cow.png" alt="Top Icon"> <!-- Update the image src -->
+        <div class="header-top">
+            <div class="top-icon">
+                <img src="/static/cow.png" alt="Top Icon">
+            </div>
+            <div class="name">
+                <h2>AggieCollab</h2>
+            </div>
         </div>
         <div class="login">
             <h2>Get Started</h2>
