--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script src="/static/main.js"></script>
 </head>
 <body>
-    <!-- Intro/Home Page Section -->  
+    <!-- Intro Page Section -->  
     <section id="intro-page">
         <div class="header-top">
             <div class="top-icon">
