--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="background-right">
             <div class="copyright">
-                <p>&copy; 2024. All rights reserved.</p>
+                <p>&copy; 2024 AggieCollab. All rights reserved.</p>
             </div>            
         </div>
         <div class="words">
