add events added

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="user-actions">
-            <a href="#">Add Event</a>
+            <a href="/event">Add Event</a> <!-- Updated this link -->
             <a href="#">Profile</a>
         </div>
     </header>
