--- a/templates/explore.html
+++ b/templates/explore.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="user-actions">
-            <a href="#">Add Event</a>
+            <a href="#"><img src="/static/plus.png"></a>
             <a href="#">Profile</a>
         </div>
     </header>
