--- a/templates/explore.html
+++ b/templates/explore.html
@@ -36,7 +36,7 @@
     <div class="explore-container explore-page new-event" style="display: none;">
         <div class="card">
             <img src="/static/snow.png" alt="New Event Picture" class="card-img">
-            <!-- Add more event details here -->
+            <!-- Add more event details here! -->
         </div>
     </div>
 </body>
