--- a/templates/explore.html
+++ b/templates/explore.html
@@ -14,6 +14,7 @@
         </div>
         <nav>
             <ul>
+                <!-- fix links-->
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Explore</a></li>
                 <li><a href="#">Search</a></li>
@@ -36,7 +37,7 @@
     <div class="explore-container explore-page new-event" style="display: none;">
         <div class="card">
             <img src="/static/snow.png" alt="New Event Picture" class="card-img">
-            <!-- Add more event details here! -->
+            <!-- Add more event details here -->
         </div>
     </div>
 </body>
