explore functionality working. displays volunteer events

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Explore</a></li>
+                <li><a href="/explore">Explore</a></li>
                 <li><a href="#">Search</a></li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
         <div class="hero-content">
             <h1>Empower Your Community</h1>
             <p>Find your next volunteering opportunity in Davis and join a network dedicated to making a difference.</p>
-            <a href="explore.html" class="explore-button">Explore Opportunities</a>
+            <a href="/explore" class="explore-button">Explore Opportunities</a> <!-- Link to explore.html -->
         </div>
     </div>
 
