--- a/templates/explore.html
+++ b/templates/explore.html
@@ -14,31 +14,33 @@
         </div>
         <nav>
             <ul>
-                <!-- fix links-->
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Explore</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/explore">Explore</a></li>
                 <li><a href="#">Search</a></li>
             </ul>
         </nav>
         <div class="user-actions">
-            <a href="#"><img src="/static/plus.png"></a>
+            <a href="/event"><img src="/static/plus.png"></a>
             <a href="#">Profile</a>
         </div>
     </header>
     <div class="explore-container explore-page">
-        <div class="card">
-            <img src="/static/testing.png" alt="org picture" class="card-img">
-        </div>  
+        {% for opportunity in opportunities %}
+            <div class="card">
+                <img src="/static/{{ opportunity.image }}" alt="Event Picture" class="card-img"> <!-- Assuming you have images stored and named by the opportunity -->
+                <h3>{{ opportunity.organization_name }}</h3>
+                <p>{{ opportunity.description }}</p>
+                <p><strong>Interest:</strong> {{ opportunity.interest_field }}</p>
+                <p><strong>Location:</strong> {{ opportunity.location }}</p>
+                <p><strong>Date:</strong> {{ opportunity.date }}</p>
+            </div>
+        {% else %}
+            <p>No matching opportunities found.</p>
+        {% endfor %}
     </div>
     <div class="action-buttons-container">
         <button class="action-btn dislike"><img src="/static/dislike-icon.png" alt="Dislike"></button>
         <button class="action-btn like"><img src="/static/like-icon.png" alt="Like"></button>
-    </div>
-    <div class="explore-container explore-page new-event" style="display: none;">
-        <div class="card">
-            <img src="/static/snow.png" alt="New Event Picture" class="card-img">
-            <!-- Add more event details here -->
-        </div>
     </div>
 </body>
 </html>
