--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <!-- Registration Section -->
+    <div class="logo-container">
+        <img src="/static/cow.png" alt="Icon" class="logo">
+    </div>
     <section id="signup-page">
         <h2>Sign Up</h2>
         <form action="/register" method="POST">
