--- a/templates/event.html
+++ b/templates/event.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
     <script src="/static/main.js"></script>
 </head>
-<body>
+<body class="add-event-page">
     <h1>Add New Event</h1>
     <form action="/add-event" method="post">
         <div>
