--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 
 body {
     margin: 0;
@@ -243,11 +245,11 @@ body {
     margin-bottom: -170px;
 }
 
-.logo {
+/* .logo {
     margin-top: 20px;
-    max-width: 130px; /* Adjust the size as needed */
+    max-width: 130px; 
     height: auto;
-}
+}   */
 
 /* HOME PAGE */
 header {
@@ -258,11 +260,16 @@ header {
     background-color: transparent;
 }
 
-.website-title {
-    text-align: center; /* Centers the title text */
-    margin: 20px 0; /* Adds some space around the title */
-    font-size: 2rem; /* Increases the font size */
-    color: #333; /* Dark grey color for the text */
+#title {
+    font-family: 'Montserrat', sans-serif; 
+    font-size: 2.5rem; /* Bigger size for visibility */
+    font-weight: 700; /* Bold weight for impact */
+    color: rgb(0, 2, 3); /* A color that stands out */
+    position: absolute; /* Absolute positioning */
+    top: 15px; /* Adjust as needed */
+    left: 75px; /* Adjust as needed */
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1); /* Text shadow for depth */
+    z-index: 10; /* Make sure it's above other elements */
 }
 
 .hero-section {
@@ -344,12 +351,28 @@ header {
 
 .description-content {
     flex-basis: 50%; /* Takes up half the space of the container */
-    display: flex; /* Enables flexbox layout within the description content */
-    flex-direction: column; /* Stacks flex items vertically */
-    justify-content: center; /* Centers flex items vertically */
-    align-items: center; /* Centers flex items horizontally */
-    padding-left: 20px; /* Adds some space between image and text */
-    text-align: center; /* Centers the text itself */
+    padding: 2rem; /* More padding for breathing space */
+    text-align: left; /* Align the text to the left */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start; /* Align items to the start of the flex container */
+}
+
+.description-content h2 {
+    margin-bottom: 1rem; /* More space below the heading */
+    font-size: 2.5rem; /* Larger font size for the heading */
+    font-weight: bold; /* Bold font weight for the heading */
+    line-height: 1.2; /* Adjust line height for better readability */
+    color: #333; /* Adjust color for better contrast if needed */
+}
+
+.description-content p {
+    font-size: 1.25rem; /* Increase font size for readability */
+    margin-bottom: 1rem; /* More space below paragraphs */
+    line-height: 1.6; /* Adjust line height for better readability */
+    color: #555; /* Slightly lighter color for the text */
+    letter-spacing: 0.5px; /* Optionally adjust letter spacing for aesthetics */
 }
 
 .description-image {
@@ -363,7 +386,7 @@ header {
   
 
 .logo img {
-    height: 40px; /* Adjust as needed */
+    height: 50px; /* Adjust as needed */
 }
 
 nav {
