--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
                 you can transform your passion into meaningful action.</p>
         </div>
         <div class="description-image">
-            <img src="/static/volunteering_people_2.jpeg" alt="Our Mission"> <!-- Replace with your actual image path -->
+            <img src="/static/volunteering_people_2.jpeg" alt="Our Mission"> <!-- Replace with your actual image path! -->
         </div>
     </section>
 
