fixed clicking on home redirects to home

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/dashboard">Home</a></li>
                 <li><a href="/explore">Explore</a></li>
                 <li><a href="#">Search</a></li>
             </ul>
