--- a/templates/home.html
+++ b/templates/home.html
@@ -11,35 +11,36 @@
     <header>
         <div class="logo">
             <img src="/static/cow.png" alt="Icon">
-            <!-- Title -->
-            <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <style>
-                    /* CSS to position the title at the top left */
-                    #title {
-                        position: absolute;
-                        top: 15px; /* Adjust as needed */
-                        left: 75px; /* Adjust as needed */
-                        font-size: 25px;
-                    }
-                </style>
-            </head>
-            <body>
-                <h1 id="title">AggieCollab</h1>
-                <!-- Other content of your webpage goes here -->
-            </body>
-            </html>
         </div>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <style>
+                /* CSS to position the title at the top left */
+                #title {
+                    position: absolute;
+                    top: 10px; /* Adjust as needed */
+                    left: 85px; /* Adjust as needed */
+                    font-size: 35px;
+                }
+            </style>
+        </head>
+        <body>
+            <h1 id="title">AggieCollab</h1>
+            <!-- Other content of your webpage goes here -->
+        </body>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="/explore">Explore</a></li>
                 <li><a href="#">Search</a></li>
+                <li><a href="#">Host</a></li>
             </ul>
         </nav>
-        <div class="user-actions">
-            <a href="/event"><img src="/static/plus.png"></a> <!-- Updated this link -->
+        <div class = "user-actions-inbox">
+            <a href="/event"><img src="/static/inbox.png" alt="Add Event"></a>
+        </div>
+        <div class="user-actions-profile">
             <a href="#">Profile</a>
         </div>
     </header>
