--- a/templates/explore.html
+++ b/templates/explore.html
@@ -20,8 +20,10 @@
             </ul>
         </nav>
         <div class="user-actions">
-            <a href="/event"><img src="/static/plus.png" alt="Add Event"></a>
-            <a href="#">Profile</a>
+            <ul>
+            <li><a href="/event"><img src="/static/plus.png" alt="Add Event"></a></li>
+            <li><a href="/profile">Profile</a></li>
+            </ul>
         </div>
     </header>
     <div id="opportunity-container" class="explore-container explore-page">
