--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="/explore">Explore</a></li>
-                <li><a href="#">Host</a></li>
+                <li><a href="/event">Host</a></li>
             </ul>
         </nav>
         <div class = "user-actions-inbox">
