--- a/templates/explore.html
+++ b/templates/explore.html
@@ -52,7 +52,7 @@
     </div>
 
     <script>
-        // Placeholder for your dynamic event loading and handling code
+        // Placeholder for your dynamic event loading and handling code!
     </script>
 </body>
 </html>
