--- a/templates/explore.html
+++ b/templates/explore.html
@@ -36,19 +36,11 @@
                 <li><a href="#">Host</a></li>
             </ul>
         </nav>
-<<<<<<< HEAD
         <div class="user-actions">
             <ul>
             <li><a href="/event"><img src="/static/plus.png" alt="Add Event"></a></li>
             <li><a href="/profile">Profile</a></li>
             </ul>
-=======
-        <div class = "user-actions-inbox">
-            <a href="/event"><img src="/static/inbox.png" alt="Add Event"></a>
-        </div>
-        <div class="user-actions-profile">
-            <a href="#">Profile</a>
->>>>>>> 2dd7234a354d53fa7019f6d19c8170b126c8cb1f
         </div>
     </header>
     <div id="opportunity-container" class="explore-container explore-page">
@@ -60,7 +52,7 @@
     </div>
 
     <script>
-        // Placeholder for your dynamic event loading and handling code!
+        // Placeholder for your dynamic event loading and handling code!!
     </script>
 </body>
 </html>
