--- a/templates/explore.html
+++ b/templates/explore.html
@@ -33,14 +33,14 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="/explore">Explore</a></li>
-                <li><a href="#">Host</a></li>
+                <li><a href="/event">Host</a></li>
             </ul>
         </nav>
-        <div class="user-actions">
-            <ul>
-            <li><a href="/event"><img src="/static/plus.png" alt="Add Event"></a></li>
-            <li><a href="/profile">Profile</a></li>
-            </ul>
+        <div class = "user-actions-inbox">
+            <a href="/event"><img src="/static/inbox.png" alt="Add Event"></a>
+        </div>
+        <div class="user-actions-profile">
+            <a href="#">Profile</a>
         </div>
     </header>
     <div id="opportunity-container" class="explore-container explore-page">
