--- a/templates/event.html
+++ b/templates/event.html
@@ -30,7 +30,7 @@
     </body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/dashboard">Home</a></li>
             <li><a href="/explore">Explore</a></li>
             <li><a href="#">Host</a></li>
         </ul>
