--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
         </body>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/dashboard">Home</a></li>
                 <li><a href="/explore">Explore</a></li>
                 <li><a href="/event">Host</a></li>
             </ul>
