--- a/static/styles.css
+++ b/static/styles.css
@@ -482,13 +482,12 @@ nav ul li a {
     top: 50%;
     left: 10px; /* Adjust the left position as needed */
     transform: translateY(-50%);
-    background-color: transparent; /* Adjust opacity as needed */
+    background-color: transparent;
     padding: 20px;
-    display: inline-block;
-    white-space: nowrap; /* Prevent line breaks */
     color: white;
-    word-wrap: break-word;
-    max-width: 10%;
+    word-wrap: break-word; /* Allow long words to be broken and wrap to the next line */
+    max-width: calc(100% - 20px); /* Set max-width to ensure text doesn't overflow, subtracting padding */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 .card {
